--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE HTML>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <html lang="en-US">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="5;url=http://ozone.nextcentury.com">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Ozone Redirect</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="refresh" content="5;url=http://ozone.nextcentury.com">
 
-        <title>Page Redirection</title>
+        <link rel="stylesheet" href="css/normalize.min.css" />
+        <link rel="stylesheet" href="css/icons.css" />
+        <link rel="stylesheet" href="css/main.css" />
+
+        <!--[if lt IE 9]>
+            <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
+        <![endif]-->
     </head>
     <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+         <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title"><a href="index.html"><img src="img/logo_o.png" /></a></h1>
+            </header>
+        
+            <div class="section-container one">
+                <div class="wrapper clearfix">
+                    <h2>You are being directed to the new home of</h2>
+                    <h1>Ozone Platform</h1>
+                    <nav class="one">
+                    </nav>
+                </div>
+            </div>
+        </div>
+		<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
         If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to example</a>
-    </body>
+    
+	    <div class="main-container">
+            <div class="main wrapper clearfix">
+            </div>
+        </div>
+
+        <div class="footer-container">
+            <footer class="wrapper clearfix">
+                <p>Free and open source. Released under <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>.</p>
+            </footer>
+        </div>
+
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
+
+        <script src="js/main.js"></script>
+	</body>
 </html>
