--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
         
             <div class="section-container one">
                 <div class="wrapper clearfix">
-                    <h2>You are being directed to the new home of</h2>
-                    <h1>Ozone Platform</h1>
+                    <h2>You are being re-directed to the new home of</h2>
+                    <h1>Ozone</h1>
                     <nav class="one">
                     </nav>
                 </div>
             </div>
         </div>
-		<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to example</a>
-    
-	    <div class="main-container">
-            <div class="main wrapper clearfix">
+		<div class="main-container">
+			<div class="main wrapper clearfix">
+				<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+				<h2>If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to Ozone</a>.<h2>
             </div>
         </div>
 
