--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="wrapper clearfix">
                     <h2>You are being re-directed to the new home of</h2>
                     <h1>Ozone</h1>
+					<h1>presented by Next Century</h1>
                     <nav class="one">
                     </nav>
                 </div>
@@ -38,7 +39,7 @@
 		<div class="main-container">
 			<div class="main wrapper clearfix">
 				<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-				<h2>If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to Ozone</a>.<h2>
+				<center><h2>If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to Ozone</a>.<h2></center>
             </div>
         </div>
 
