--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             </div>
         </div>
 		<div class="main-container">
-			<div class="main wrapper clearfix">
+			<div class="main wrapper clearfix" style="text-align:center;">
 				<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-				<center><h2>If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to Ozone</a>.<h2></center>
+				<h2>If you are not redirected automatically, follow the <a href='http://ozone.nextcentury.com'>link to Ozone</a>.</h2>
+				<h2>http://ozone.nextcentury.com</h2>
             </div>
         </div>
 
